--- a/mudi/src/main/resources/templates/home.html
+++ b/mudi/src/main/resources/templates/home.html
@@ -2,30 +2,46 @@
 	
 	<head>
 		<meta charset="UTF-8">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 	</head>
 
-	<body>		
-		<div th:each="pedido : ${pedidos}">
-			<div th:text="${pedido.nomeProduto}">Nome de produto</div>
-			<div>Valor: <span th:text="${pedido.valorNegociado}">200,99</span> </div>
-			<div>Data da entrega: <span th:text="${pedido.dataDaEntrega}">10/02/2024</span> </div>
-			
-			
-			<div>Produto</div>
-			<div> <input th:value="${pedido.urlProduto}" value="url do produto"></div>
-			
-			<div>Descrição</div>
-			
-			<div>
-				<textarea th:text="${pedido.descricao}">Descrição do pedido</textarea>
+	<body>	
+	<div class="container">	
+		<div class="card" th:each="pedido : ${pedidos}">
+			<div class="card-header" th:text="${pedido.nomeProduto}">Nome de produto</div>
+			<div class="card-body">
+				
+				<div class="row">
+				<div class="col-12 col-sm-8 mb-3">
+					
+					<div class="row">
+						<div class="col-md-5">Valor: <span th:text="${pedido.valorNegociado}">200,99</span> </div>
+						<div class="col-md-7">Data da entrega: <span th:text="${pedido.dataDaEntrega}">10/02/2024</span> </div>
+					</div>
+					
+					<div>Produto</div>
+					<div> <input class="form-control" th:value="${pedido.urlProduto}" value="url do produto"></div>
+					
+					<div>Descrição</div>
+					
+					<div>
+						<textarea class="form-control" th:text="${pedido.descricao}">Descrição do pedido</textarea>
+					</div>
+					
+					
+				</div>
+				
+					<div class="col-12 col-sm-4">
+						<div>
+							<img class="img-thumbnail" th:src="${pedido.urlImagem}" src="">
+						</div>
+					</div>
+					
+				</div>
 			</div>
-			
-			<div>
-				<img alt="" src="">
-			</div>
-			
 			
 		</div>
+	</div>
 	</body>
 
 </html>
