--- a/mudi/src/main/resources/templates/home.html
+++ b/mudi/src/main/resources/templates/home.html
@@ -7,6 +7,19 @@
 
 	<body>	
 	<div class="container">	
+		
+		<nav class="navbar navbar-expand-lg bg-body-tertiary">
+			<div class="navbar-nav">
+			
+			<a class="nav-link" href="">Todos</a>
+			<a class="nav-link" href="">Aguardando</a>
+			<a class="nav-link" href="">Aprovado</a>
+			<a class="nav-link" href="">Entregue</a>
+			<a class="nav-link" href=""></a>
+			
+			</div>
+		</nav>
+		
 		<div class="card" th:each="pedido : ${pedidos}">
 			<div class="card-header" th:text="${pedido.nomeProduto}">Nome de produto</div>
 			<div class="card-body">
