--- a/mudi/src/main/resources/templates/home.html
+++ b/mudi/src/main/resources/templates/home.html
@@ -8,7 +8,11 @@
 	<body>	
 	<div class="container">	
 		
-		<nav class="navbar navbar-expand-lg bg-body-tertiary">
+		<div class="jumbotron">
+			<h1 class="display-4">Meus Pedidos</h1>
+		</div>
+		
+		<nav class="navbar navbar-expand bg-body-tertiary d-flex justify-content-between mb-3">
 			<div class="navbar-nav">
 			
 			<a class="nav-link" href="">Todos</a>
@@ -16,8 +20,8 @@
 			<a class="nav-link" href="">Aprovado</a>
 			<a class="nav-link" href="">Entregue</a>
 			<a class="nav-link" href=""></a>
-			
 			</div>
+			<a href="/pedido/formulario"><button class="btn btn-outline-secondary" type="submit">Search</button> </a>
 		</nav>
 		
 		<div class="card" th:each="pedido : ${pedidos}">
