--- a/mudi/src/main/resources/templates/home.html
+++ b/mudi/src/main/resources/templates/home.html
@@ -21,10 +21,10 @@
 			<a class="nav-link" href="">Entregue</a>
 			<a class="nav-link" href=""></a>
 			</div>
-			<a href="/pedido/formulario"><button class="btn btn-outline-secondary" type="submit">Search</button> </a>
+			<a href="/pedido/formulario"><button class="btn btn-outline-secondary" type="submit">Novo</button> </a>
 		</nav>
 		
-		<div class="card" th:each="pedido : ${pedidos}">
+		<div class="card mb-3" th:each="pedido : ${pedidos}">
 			<div class="card-header" th:text="${pedido.nomeProduto}">Nome de produto</div>
 			<div class="card-body">
 				
